# Informprojekt_SoSe2026

./: DSCB230_SoSe26_Hausarbeit_Gruppenname.ipynb  README.md  Struktur_von Project_RU.txt  durchschnitt_Zigarettenpreis_DE_1965_2025.py  main_code.ipynb  main_codespace.ipynb  pyproject.toml  statistic_id182391_zigarettenkonsum-pro-tag-in-deutschland-bis-2025.xlsx  statistic_id215573_preisaufteilung-einer-schachtel-zigaretten-in-deutschland-bis-2025.xlsx  statistic_id222992_entwicklung-des-raucheranteils-unter-jugendlichen-in-deutschland-bis-2023.xlsx  statistic_id241640_marktanteile-der-fuehrenden-zigarettenhersteller-in-deutschland-2017.xlsx  statistic_id242382_rauchen---anteil-von-rauchern-unter-maennern-nach-alter-und-bildungsgrad-2015.xlsx  statistic_id596628_anzahl-raucher-in-deutschland-bis-2025.xlsx  statistic_id6187_zigarettenabsatz-in-deutschland-bis-2025.xlsx  statistic_id6207_durchschnittlicher-zigarettenpreis-in-deutschland-bis-2025.xlsx  statistic_id6209_pro-kopf-verbrauch-von-zigaretten-in-deutschland-bis-2025.xlsx
.ipynb_checkpoints/: DSCB230_SoSe26_Hausarbeit_Gruppenname-checkpoint.ipynb
Preis_vs_Konsum/: _durchschnittlicher-zigarettenpreis-in-deutschland.xlsx  _pro-kopf-verbrauch-von-zigaretten-in-deutschland.xlsx  preis_vs_konsum.py
Prognose_Änderung_der_Zigarrttenpreis/: Prognose.ipynb  Prognose_Änderung_der_Zigarrttenpreis.py
__Markt-analyse__/: Preis&Steuern.ipynb  Preis_und_Steuern.ipynb
__People-analyse__/: statistic_id1170342_praevalenz-von-tabakkonsum-in-deutschland-nach-geschlecht-bis-2030.xlsx
__Ziggroup__/: clean_data.csv  (+3 more)
(+17 files in other folders)
