[project]
name = "informprojekt-sose2026"
version = "0.1.0"
description = ""
authors = [
    {name = "samanthaabt22022005",email = "sam.abt.24@lehre.mosbach.dhbw.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
